# paraLot

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
analyzer/: data_parser.py
analyzer/igc_parser/: igc_lib.py
analyzer/igc_parser/lib/: viterbi.py
igc_analyzer/src/: CMakeLists.txt  igc_analyzer.cpp  igc_analyzer.hpp  main.cpp
igc_analyzer/tests/: CMakeLists.txt  test.cpp
scraper/: XCportalV2.py  scraper_ut.py
